fixed z-index for navigation components

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -10,7 +10,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1001;
+    z-index: 1000;
     width: 100%;
     height: 90px;
     padding: 20px 0;
@@ -49,7 +49,7 @@
 
 .brand {
   position: relative;
-  z-index: 1001;
+  z-index: 3;
 
   a {
     display: flex;
