--- a/src/scss/components/_main-menu.scss
+++ b/src/scss/components/_main-menu.scss
@@ -1,6 +1,6 @@
 #main-menu {
   position: fixed;
-  z-index: 2000;
+  z-index: 2;
   top: 0;
   left: 0;
   right: 0;
