--- a/src/scss/elements/_overlay.scss
+++ b/src/scss/elements/_overlay.scss
@@ -6,7 +6,7 @@ header:after {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 1000;
+  z-index: 1;
   transition: all 1s ease-in-out;
   width: 200%;
   height: 200%;
